<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Book</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here"><u>Register Here</u></string>
    <string name="pass_stars">**********</string>
    <string name="login_example">e.g.: 01324259</string>
    <string name="student_id">Student ID</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="app_logo">App Logo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="repeat_password">Repeat your password</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="name_example">Your Full Name</string>
    <string name="title_activity_my_classes">MyClassesActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="drawer_open">TestOpen</string>
    <string name="drawer_close">TestClose</string>
    <string name="title_activity_class_view_fragment">ClassViewFragment</string>
    <string name="class_code_example">CECS 453</string>
    <string name="class_name_example">Mobile Applications Development</string>
    <string name="example_professor">Ramin Moazeni</string>
    <string name="department_example">SAL 309</string>
    <string name="prof_contact_example">moazeni@usc.edu</string>
    <string name="section_information_header">Section Information</string>
    <string name="section_info_example">01 #3451 SEM Mon-Wed 8-8:50PM ECS-412</string>
    <string name="class_num_example">1047</string>
    <string name="student_name_example">David Burgoni Stolker</string>
    <string name="student_id_example">#012719234</string>
    <string name="student_major_example">Computer Engineering</string>
    <string name="image_descriptor_professor">Professor Image</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="volume">Volume</string>
    <string name="vibration">Vibration</string>
    <string name="header_example">Header Example</string>
    <string name="menu_item">Menu Item</string>
    <string name="name">Name</string>
    <string name="btn_confirm_changes">Confirm Changes</string>
    <string name="email">E-mail</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="fragment_course_title">CECS 453 - ListDescribe</string>
    <string name="logout">Logout</string>

</resources>
