<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.csulb.android.smartbook.views.LoginActivity" >

    <LinearLayout
        android:id="@+id/lLayoutLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="#000000"
            android:text="@string/student_id" />

        <EditText
            android:id="@+id/edtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/login_example"
            android:inputType="number"
            android:maxLength="9"
            android:maxLines="1"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/txtPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:text="@string/password" />

        <EditText
            android:id="@+id/edtPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/pass_stars"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:singleLine="true" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lLayoutLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center|center_horizontal"
        android:text="@string/login"
        android:width="150dp" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:text="@string/register_here" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lLayoutLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:adjustViewBounds="true"
        android:maxHeight="140dp"
        android:maxWidth="140dp"
        android:src="@drawable/bk_0" />

</RelativeLayout>