<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/DrawerItemLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >

    <TextView
        android:id="@+id/txtClassItemNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtClassItemCode"
        android:layout_alignBottom="@+id/txtClassItemCode"
        android:layout_marginLeft="23dp"
        android:layout_toRightOf="@+id/txtClassItemCode"
        android:text="@string/class_num_example" />

    <TextView
        android:id="@+id/txtClassItemCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtClassItemName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/class_code_example"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtClassItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtClassItemCode"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="5dp"
        android:text="@string/class_name_example" />

</RelativeLayout>
