<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.csulb.android.smartbook.views.ClassViewFragment" >

    <TextView
        android:id="@+id/txtClassCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/class_code_example"
        android:textColor="#000000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtClassName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtClassCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/class_name_example"
        android:textColor="#000000"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/txtClassName"
        android:layout_marginTop="15dp" >

        <ImageView
            android:id="@+id/imgProfessor"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_descriptor_professor"
            android:cropToPadding="true"
            android:src="@drawable/prof_example" />

    <TextView
        android:id="@+id/txtProfContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtProfName"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/imgProfessor"
        android:layout_toRightOf="@+id/imgProfessor"
        android:text="@string/prof_contact_example"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/txtProfDep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtProfContact"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/imgProfessor"
        android:layout_toRightOf="@+id/imgProfessor"
        android:text="@string/department_example"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/txtProfName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtProfContact"
        android:layout_alignStart="@+id/txtProfContact"
        android:layout_alignTop="@+id/imgProfessor"
        android:text="@string/example_professor"
        android:textColor="#000000" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnAttendanceList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnStudentList"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:text="Attendance List" />

    <Button
        android:id="@+id/btnStudentList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAttendanceList"
        android:layout_alignLeft="@+id/btnAssignmentList"
        android:text="Student List" />

    <Button
        android:id="@+id/btnAssignmentList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnStudentList"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:text="Assignment List" />

    <TextView
        android:id="@+id/txtSectionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAssignmentList"
        android:layout_alignLeft="@+id/txtClassName"
        android:layout_marginBottom="51dp"
        android:layout_marginLeft="71dp"
        android:text="TextView" />

</RelativeLayout>