<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.csulb.android.smartbook.views.ClassViewFragment" >

    <ImageView
        android:id="@+id/imgUserProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:src="@drawable/student_example" />

    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgUserProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:textSize="20sp"
        android:text="@string/student_name_example" />

    <TextView
        android:id="@+id/txtUserMajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/student_major_example" />

    <TextView
        android:id="@+id/txtUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/student_id_example" />

</RelativeLayout>